# brikk-infrastructure

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .semgrep.yml  CHANGELOG.md  CI_IMPLEMENTATION_SUMMARY.md  COMMIT_MSG_STRIPE_PIN.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_STAGE2.md  DEV_SETUP_IMPLEMENTATION_SUMMARY.md  Dockerfile  FINAL_DELIVERY_SUMMARY.md  Makefile  PHASE_10-12_IMPLEMENTATION_PLAN.md  PR_CHECKLIST.md  RAILWAY_ENV_VARS.md  README.md  README_STAGE1.md  README_STAGE2.md  README_STAGE3.md  SECURITY.md  SECURITY_DOCS_SYNC_SUMMARY.md  STAGE1_IMPLEMENTATION_SUMMARY.md  STAGE2_DELIVERABLES.md  STAGE2_IMPLEMENTATION_SUMMARY.md  STRIPE_UPGRADE_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_STAGE2.md  alembic.ini  brikk-infrastructure-magiclink-additive (1).patch  brikk-playground-docs-fix.patch  brikk_local.db  docker-compose.local.yml  (+12 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
artifacts/: version.txt
brikk-economy-ui/: index.html  package.json
brikk-infrastructure/: README.md  requirements.txt
brikk-ui/: index.html  package.json
docs/: DEPENDABOT.md  LEGACY_DB_MIGRATION.md  LOCAL_DEVELOPMENT.md  PHASE_7_8_COMPLETION.md  PRODUCTION_READINESS.md  RATE_LIMITING.md  README.md  RENDER.md  SECURITY_CI.md  phase-7-README.md
migrations/: README.md  env.py  phase_7_marketplace_analytics.sql
research/: stage2_architecture_plan.md  stage2_coordination_patterns.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/brikk/: __init__.py  _http.py  client.py  errors.py  types.py
sdk/python/brikk/resources/: __init__.py  agents.py  coordination.py  economy.py  health.py  reputation.py
sdk/python/tests/: test_import.py  test_smoke.py
(+370 files in other folders)
